# DRL Trading Preprocess Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-preprocess"
version = "0.1.0"
description = "Data preprocessing service for AI-powered trading system"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Preprocessing service specific dependencies
dependencies = [
    # Workspace dependencies
    "drl-trading-common", # Provides confluent-kafka
    "drl-trading-core",
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Dependency injection
    "injector>=0.22.0",
    # Configuration support - required by drl-trading-common
    "PyYAML>=6.0",
    "drl-trading-adapter",
    "feast>=0.53.0",
    # Parallel processing for coverage analysis
    "dask[dataframe]>=2024.1.0",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }
drl-trading-core = { workspace = true }
drl-trading-adapter = { workspace = true }

[dependency-groups]
# Testing dependencies (following workspace standards)
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",
    "minio>=7.2.10"
]
# Development dependencies (following workspace standards)
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "pytest-benchmark>=5.1.0",
    "psutil>=7.0.0",
    "memory-profiler>=0.61.0",
]
dev-full = [
    # Development dependencies
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",
    "minio>=7.2.10",
    # Core dependencies for preprocessing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_preprocess", "drl_trading_core", "drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_preprocess"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]

# Pytest configuration for DRL Trading Preprocess service
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=drl_trading_preprocess",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage_html",
    "--cov-fail-under=85",
    "-m", "not load"
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests with external dependencies",
    "load: Load and performance tests (disabled by default, use --load to enable)",
    "benchmark: Benchmark tests using pytest-benchmark",
    "slow: Tests that take longer than 10 seconds",
    "memory_intensive: Tests that use significant memory",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drl_trading_preprocess"]
