# DRL Trading Strategy Example Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "drl-trading-strategy-example"
version = "0.1.0"
description = "Example trading strategy implementation using DRL framework"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Strategy-specific dependencies
dependencies = [
    # Workspace dependencies
    "drl-trading-common",
    # Core data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "talipp",  # Strategy-specific technical analysis library
    # Dependency injection framework
    "injector>=0.22.0"
]

[tool.uv.sources]
drl-trading-common = { workspace = true }

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

# Package discovery configuration
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_strategy_example", "drl_trading_common"]

[tool.ruff.lint.per-file-ignores]
"src/drl_trading_strategy_example/preprocess/feature/todo_*.py" = ["B019"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_strategy_example"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]

# Project-specific pytest configuration (extends workspace defaults)
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-m not slow"
    # Uncomment for coverage reporting:
    # "--cov=drl_trading_strategy_example",
    # "--cov-report=term-missing"
]

# Project-specific dependency groups
[dependency-groups]
dev = [
    "injector>=0.22.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
