## DRL Trading Strategy Example Package Configuration
## Unified structure aligned with architectural standards (see .github/instructions)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-strategy-example"
version = "0.1.0"
description = "Example trading strategy implementation using DRL framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "sonntagnico", email = "nico-tor@hotmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Runtime dependencies ONLY (installation into deployable services)
dependencies = [
    "drl-trading-common", # Workspace dependency
    "numpy>=1.24.0", # Numerical ops
    "pandas>=2.0.0", # DataFrames
    "talipp", # Technical indicators (strategy specific)
    "jsonpickle>=3.0.0", # Indicator state serialization
    "injector>=0.22.0", # DI framework
]

[tool.uv.sources]
drl-trading-common = { path = "../drl-trading-common" }

## Optional extras (for external consumers) kept thin; dev/test go via dependency-groups
[project.optional-dependencies]
testing = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=1.8.0", "ruff>=0.1.0", "ipython>=8.0.0"]

## Dependency groups (uv) standardized across packages
[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
dev-full = [
    # Dev
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Test
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    # (No extra ML libs beyond runtime to avoid divergence)
]

## Ruff configuration overrides (keep minimal per-project customizations)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_strategy_example", "drl_trading_common"]

[tool.ruff.lint.per-file-ignores]
"src/drl_trading_strategy_example/preprocess/feature/todo_*.py" = ["B019"]

## Coverage settings
[tool.coverage.run]
source = ["drl_trading_strategy_example"]
branch = true
omit = ["*/tests/*", "*/setup.py"]

## Pytest configuration (extends workspace defaults)
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-m not slow and not benchmark", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselected by default)",
    "benchmark: marks tests as benchmarks (deselected by default, run with -m benchmark)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drl_trading_strategy_example"]
