# DRL Trading Training Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "drl-trading-training"
version = "0.1.0"
description = "Training module for AI-powered trading system with reinforcement learning capabilities"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Training service specific dependencies
dependencies = [
    # Workspace dependencies
    "drl-trading-common",
    "drl-trading-core",
    # Core ML dependencies
    "pandas>=2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    # CLI framework
    "click",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }
drl-trading-core = { workspace = true }
drl-trading-strategy-example = { workspace = true }

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
]
production = [
    "pika>=1.3.0",  # RabbitMQ client
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_training", "drl_trading_core", "drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_training"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]
